@@ -80,6 +80,8 @@
 2268
 54
 54
+1
+1
 [9, [3, 3], [[Mod(-2, a^2 - a + 1), Mod(-3*a + 2, a^2 - a + 1)], [Mod(0, a^2
  - a + 1), Mod(-a + 2, a^2 - a + 1)]]]
 [9, [3, 3], [[Mod(-9/4, a^2 - a + 1), Mod(-3*a + 1, a^2 - a + 1)], [Mod(-1/4
@@ -102,6 +104,7 @@
 [3.4324153628883011196857987711414818098]
 81
 2
+1
 [3, [3], [[Mod(75, a^2 - a - 22), Mod(-53*a + 276, a^2 - a - 22)]]]
 0.029243259302535776270985513029724899123
 0.029243259302535776270985513029724899123
@@ -118,6 +121,7 @@
 5577349]
 89
 4
+1
 [10, [10], [[Mod(a^2, a^3 - a^2 + 1), Mod(-2*a^2 + 1, a^3 - a^2 + 1)]]]
 0.33753547062081148560344962283967451356
 [[3.5491769254598924808129220481653238934, -2.542655659111084982919736837317
@@ -142,16 +146,26 @@
 
 10351
 2.6776858460184521884180352812357212922
+-1
 2.4789169415611595631185019889765914992
+-1
 2.7983467075796708218369484107296525132
+-1
 0.94644710225720189761360064296904262845
 1.1306942438544073283221551692300185759
+1
 1.9118646495040059117224489068629589287
 2.3989895152878390668263655479635937156
+1
 1.1553619177287290907122191262256779900
 1.8108719765738961774239981105279304803
+1
 0.21953076079603813973615927742358668802
+-1
 0.047510692468775579593867285193171421843
+-1
 0.35764851040087134693652331655969825375
+-1
 0.092936445769006934770949560984704427735
-Total time spent: 596
+-1
+Total time spent: 16388
